[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "swap-heartbeat"
version = "0.1.0"
description = "A Python wrapper for sending SWAP hearbeat packets."
authors = [
    {name = "Chris Kitras", email = "chkitras@byu.edu"}
]
license = {text = "holup"}
readme = "README.md"
dependencies = [
    "Cython"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/NET-BYU/swap-heartbeat"
Repository = "https://github.com/NET-BYU/swap-heartbeat"
Issues = "https://github.com/NET-BYU/swap-heartbeat/issues"

[tool.setuptools]
packages = ["swap_heartbeat"]

[tool.setuptools.package-data]
"swap_heartbeat" = ["*.pyx", "*.pxd", "*.h", "*.c"]

[tool.setuptools.exclude-package-data]
"swap_heartbeat" = ["__pycache__/*"]

[tool.setuptools.ext_modules]
"swap_heartbeat" = "Cython.Build.cythonize(['swap_heartbeat/*.pyx'])"

[project.scripts]
swap_heartbeat = "swap_heartbeat.cli:main"
